--- a/doc/spinify.1
+++ b/doc/spinify.1
@@ -118,5 +118,5 @@ Written by Loic Seguin-C. <loicseguin@gmail.com>
 .Sh Resources
 Main website: http://bitbucket.org/loicseguin/spinify
 .Sh Copying
-Copyright (C) 2009-2010 Loic Seguin-C. Free use of this software is
+Copyright (C) 2009, 2010 Loic Seguin-C. Free use of this software is
 granted under the terms of the BSD license.
