Ready for autoreconf.

--- a/README
+++ b/README
@@ -39,7 +39,7 @@ background as well as the program as soon as possible.
 If you have questions, comments or just want to discuss about the
 development of Spinify, you can do so on the mailing list:
 
-[[mailto:spinify-discuss@googlegroups.com|spinify-discuss@googlegroups.com]]
+spinify-discuss@googlegroups.com
 
 You can subscribe to the mailing list here:
 
