Tilde expansion for filenames.

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -408,26 +408,30 @@ m4trace:configure.ac:12: -1- AC_DEFINE_TRACE_LITERAL([TIME_WITH_SYS_TIME])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
 m4trace:configure.ac:12: -1- AH_OUTPUT([TIME_WITH_SYS_TIME], [/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME])
-m4trace:configure.ac:13: -1- AC_CONFIG_HEADERS([config.h])
-m4trace:configure.ac:19: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:13: -1- AC_DEFINE_TRACE_LITERAL([size_t])
+m4trace:configure.ac:13: -1- m4_pattern_allow([^size_t$])
+m4trace:configure.ac:13: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
+#undef size_t])
+m4trace:configure.ac:14: -1- AC_CONFIG_HEADERS([config.h])
+m4trace:configure.ac:20: -1- AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
 	doc/Makefile
 	tests/Makefile
 ])
-m4trace:configure.ac:20: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:20: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:20: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:20: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:20: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:21: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:21: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:21: -1- AC_SUBST_TRACE([MKDIR_P])
