--- a/doc/spinify.1
+++ b/doc/spinify.1
@@ -345,4 +345,6 @@ Main website: <http://bitbucket.org/loicseguin/spinify>
 Copyright (C) 2009, 2010 Loic Seguin-C. Free use of this software is
 granted under the terms of the BSD license.
 .Sh BUGS
-Please report bugs to <http://bitbucket.org/loicseguin/spinify/issues/>
+Please report bugs to
+.Bk words
+<http://bitbucket.org/loicseguin/spinify/issues/>
