--- a/doc/spinify.1
+++ b/doc/spinify.1
@@ -13,13 +13,11 @@
 .\".Nm Yet another name for the same program.
 .\" Use .Nm macro to designate other names for the documented program.
 .Nd Modelling the Ising model on curved surfaces.
-
 .Sh SYNOPSIS             \" Section Header - required - don't modify
 .Nm
 .Op Fl g Ar file | Fl r Ar N M | Fl s Ar N | Fl u Ar N
 .Op Fl ekm
 .Op options
-
 .Sh DESCRIPTION          \" Section Header - required - don't modify
 The two dimensional Ising model tries to explain magnetic phenomena in
 thin layers of matter. The atoms are represented as nodes of a
@@ -82,9 +80,9 @@ The user can ask
 to write the graph data into a file by providing the
 .Fl o Ar file
 option. Depending on the choice of ouput (
-.Fl -raw
+.Fl Fl raw
 or
-.Fl -python )
+.Fl Fl python )
 the output file does not have the same syntax. If the raw ouput is
 chosen (this is the default), in the output file, the first line is the
 number of nodes in the graph, the second line is the number of edges in
@@ -115,49 +113,48 @@ to output the data directly into a file using the
 option.
 .Pp
 Again, depending on the choice of ouput (
-.Fl -raw
+.Fl Fl raw
 or
-.Fl -python )
+.Fl Fl python )
 the output will not be formatted in the same way. For the raw output, a
 line contains the beta value (i.e., the inverse of the temperature) and
 the measurements separated by spaces. The python output is very similar
 except that it comes preformatted so that the Python interpreter can
 execute the file to produce graphs of the measurements versus
 temperature.
-
 .Sh OPTIONS
 .Bl -tag -width
 .It General options:
 .Bl -tag -width -indent  \" Differs from above in tag removed 
-.It Fl c Ar file , Fl -config-file Ar file
+.It Fl c Ar file , Fl Fl config-file Ar file
 Read configuration options from
 .Ar file .
-.It Fl h , Fl -help
+.It Fl h , Fl Fl help
 Print a help message detailing all the available options.
-.It Fl v , Fl -version
+.It Fl v , Fl Fl version
 Print version information.
 .El
 .It Graph options
 (these options are mutually exclusive):
 .Bl -tag -width -ident
-.It Fl g Ar file , Fl -graph-infile Ar file
+.It Fl g Ar file , Fl Fl graph-infile Ar file
 Read graph data from
 .Ar file .
 The input file has to have the raw format described above otherwise the
 file parser will fail to read the graph data correctly and may produce
 unpredictable results.
-.It Fl r Ar N M , Fl -rectangle Ar N M
+.It Fl r Ar N M , Fl Fl rectangle Ar N M
 Use a rectangular graph with length
 .Ar N
 and height
 .Ar M .
 Both arguments must be positive integers.
-.It Fl s Ar N , Fl -sphere-even Ar N
+.It Fl s Ar N , Fl Fl sphere-even Ar N
 Use a spherical graph with
 .Ar N
 nodes and an even node distribution. The argument must be a positive
 integer.
-.It Fl u Ar N , Fl -sphere-uniform Ar N
+.It Fl u Ar N , Fl Fl sphere-uniform Ar N
 Use a spherical graph with
 .Ar N
 nodes and a uniform node distribution. The argument must be a positive
@@ -165,7 +162,7 @@ integer.
 .El
 .It Temperature options:
 .Bl -tag -width -ident
-.It Fl T Ar n m i , Fl -temperatures Ar n m i
+.It Fl T Ar n m i , Fl Fl temperatures Ar n m i
 The simulation will be done at temperatures ranging from
 .Ar n
 to
@@ -192,34 +189,34 @@ has to be positive.  Otherwise, it has to be negative.
 .El
 .It Measurements options:
 .Bl -tag -width -ident
-.It Fl e , Fl -internalEnergy
+.It Fl e , Fl Fl internalEnergy
 Measure internal energy per spin. Internal energy per spin is defined to
 be u = (J / N) \\sum_{adjacent nodes i, j} s_i s_j where s_i is the spin
 of node i, N is the number of nodes in the graph and J is the
 interaction coefficient.
-.It Fl k , Fl -susceptibility
+.It Fl k , Fl Fl susceptibility
 Measure magnetic susceptibility. It is defined as
 \\chi = \\beta N (<M^2> - <M>^2) where M is the magnetization and <> are
 used to indicate thermal average.
-.It Fl m , Fl -magnetization
+.It Fl m , Fl Fl magnetization
 Measure magnetization. Magnetization is defined as
 M = (1/N) |\\sum_{i = 1}^N s_i|. It corresponds to the average spin
 value.
 .El
 .It Output options:
 .Bl -tag -width -ident
-.It Fl o Ar file , Fl -output Ar file
+.It Fl o Ar file , Fl Fl output Ar file
 Write simulation data to
 .Ar file .
 Details about the content of the file are given in the description
 section above.
-.It Fl p , Fl -python
+.It Fl p , Fl Fl python
 Output data in a Python-friendly way.
-.It Fl r , Fl -raw
+.It Fl r , Fl Fl raw
 Output the data in raw format, i.e., outputs only the data without any
 kind of decorations. This is the preferred format for data analysis
 using anything else than Python.
-.It Fl w Ar file , Fl -write-graph Ar file
+.It Fl w Ar file , Fl Fl write-graph Ar file
 Write the graph data to
 .Ar file .
 Details about the content of the file are given in the description
@@ -227,42 +224,42 @@ section above.
 .El                      \" Ends the list
 .It Simulation options:
 .Bl -tag -width -ident
-.It Fl -correlThreshold Ar X
+.It Fl Fl correlThreshold Ar X
 The decorrelation time is the number of iterations required before the
 correlation between measurements drops below correlThreshold. This
 option sets the correlThreshold to
 .Ar X .
 It has to be a real number between
 -1 and 1.
-.It Fl -decorrelIter Ar N
+.It Fl Fl decorrelIter Ar N
 Sets the number of measurements for the calculation of the decorrelation
 time to
 .Ar N .
 The higher this value, the more accurate the decorrelation time.
 However, setting this value too high slows the execution of the
 algorithm. This argument must be a strictly positive integer.
-.It Fl -Jval Ar N
+.It Fl Fl Jval Ar N
 Set the value ot the interation coefficient
 .Ar J
 to
 .Ar N .
 Set this value to -1 for ferromagnetism and to 1 for antiferromagnetism.
 This argument has to be an integer.
-.It Fl -maxDecorrelTime Ar N
+.It Fl Fl maxDecorrelTime Ar N
 This is an upper bound on the decorrelation time. If the calculated
 value is above
 .Ar N
 it is discarded and
 .Ar N
 is used instead. This argument must be a strictly positive integer.
-.It Fl -minDecorrelTime Ar N
+.It Fl Fl minDecorrelTime Ar N
 This is a lower bound on the decorrelation time. If the calculated
 value is below
 .Ar N
 it is discarded and
 .Ar N
 is used instead. This argument must be a strictly positive integer.
-.It Fl -nInitTherm Ar N
+.It Fl Fl nInitTherm Ar N
 Every time the temperature is changed, the program performs
 .Ar N
 iterations of the Swendsen-Wang-Wolff algorithm before starting
@@ -270,7 +267,7 @@ measurements. It is very important to set this value high enough because
 otherwise the graph spin configuration will not be distributed according
 to the Gibbs distribution. This argument must be a strictly positive
 integer.
-.It Fl -nMeasures Ar N
+.It Fl Fl nMeasures Ar N
 For each measurement, take
 .Ar N
 measurements to compute the thermal average. The higher this number, the
@@ -280,13 +277,13 @@ integer.
 .It Surface options
 (used only for even node distribution on the sphere):
 .Bl -tag -width -ident
-.It Fl -dampingExp Ar X
+.It Fl Fl dampingExp Ar X
 The dampening factor for the electric repulsion has the form |G|^X - N
 where |G| is the number of nodes in the graph.
-.It Fl -dampingSub Ar N
+.It Fl Fl dampingSub Ar N
 The dampening factor for the electric repulsion has the form |G|^X - N
 where |G| is the number of nodes in the graph.
-.It Fl -objectiveRatio Ar X
+.It Fl Fl objectiveRatio Ar X
 The electric repulsion is continued as long as the minimum distance is
 not at least (1 - 
 .Ar X )
@@ -296,7 +293,7 @@ the distribution. However, the ratio should not be below 0.15 since it
 might be impossible to reach the stopping condition then.
 .Ar X
 must be between 0 and 1.
-.It Fl -rangeMultiplier Ar N
+.It Fl Fl rangeMultiplier Ar N
 This modifies the range of the electric force. It must be a striclty
 positive real number.
 .El
@@ -322,6 +319,7 @@ file with the
 option, this file is searched for first.
 .It Pa $(docdir)/spinifyrc.sample
 A sample configuration file containing all possible options.
+.El
 .\".It Pa /Users/joeuser/Library/really_long_file_name
 .\"FILE_2 description
 .\".El                      \" Ends the list
@@ -346,5 +344,6 @@ Copyright (C) 2009, 2010 Loic Seguin-C. Free use of this software is
 granted under the terms of the BSD license.
 .Sh BUGS
 Please report bugs to
-.Bk words
+.Bk 
 <http://bitbucket.org/loicseguin/spinify/issues/>
+.Ek
