--- a/doc/spinify.1
+++ b/doc/spinify.1
@@ -3,7 +3,7 @@
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
-.Dd February 28, 2010    \" DATE 
+.Dd March 16, 2011    \" DATE 
 .Dt SPINIFY	1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
@@ -340,7 +340,7 @@ Written by Loic Seguin-C. <loicseguin@gmail.com>
 .Pp
 Main website: <http://bitbucket.org/loicseguin/spinify>
 .Pp
-Copyright (C) 2009, 2010 Loic Seguin-C. Free use of this software is
+Copyright (C) 2009-2011 Loic Seguin-C. Free use of this software is
 granted under the terms of the BSD license.
 .Sh BUGS
 Please report bugs to
