--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,12 @@
-Spinify 2.2
-Copyright (C) 2009, 2010 Loïc Séguin-C. <loicseguin@gmail.com>
+Spinify 2.3
+Copyright (C) 2009-2011 Loïc Séguin-C. <loicseguin@gmail.com>
 
 
 == System requirements ==
 
-This software has been tested on Mac OS X 10.6 and Ubuntu 9.10
-(however see issue #8). It should work on almost any Unix or Linux
-operating system.  For Windows, see below.
+This software has been tested on Mac OS X 10.6 and Ubuntu 9.10. It
+should work on almost any Unix or Linux operating system.  For Windows,
+see below.
 
 Spinify can produce files that allow to visualize the lattice and to
 do some basic data visualization. In order
@@ -18,10 +18,10 @@ NumPy (http://numpy.scipy.org/) and matplotlib
 == Installation ==
 
 The most recent release version of Spinify is available here:
-http://bitbucket.org/loicseguin/spinify/downloads/spinify-2.2.tar.gz.
+http://bitbucket.org/loicseguin/spinify/downloads/spinify-2.3.tar.gz.
 You can install it by decompressing the archive
 
-    $ tar xjvf spinify-2.2.tar.gz
+    $ tar xjvf spinify-2.3.tar.gz
 
 and then build and install the program
 
@@ -73,11 +73,10 @@ Very little testing has been done on Windows OSes. The software may or
 may not work correctly. If you want to try it out, the simplest is to
 grab the executable directly from:
 
-http://bitbucket.org/loicseguin/spinify/downloads/spinify-2.2.exe
+http://bitbucket.org/loicseguin/spinify/downloads/spinify-2.3.exe
 
-This executable was built on Windows XP SP3. It runs fine on this
-platform, but it has not been tested on Vista or Windows 7.
+This executable was built on Windows 7. It runs fine on this
+platform, but it has not been tested on XP or Vista.
 
-There is a Dev-C++ project file in src/win32 which can be used to build
-the software on Windows (compiles with MinGW). The source does not
-compile with MS Virtual C++.
+There is a Visual C++ project file in ??? which can be used to build
+the software on Windows.
