Update version tag and fix handling of temperatures.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 == Spinify ==
 
-Version: 2.3
+Version: 2.4dev
 
 http://bitbucket.org/loicseguin/spinify/
 Copyright (C) 2009-2011 Loïc Séguin-C. <loicseguin@gmail.com>
